--- a/windows/VS2019/puttytel/puttytel.vcxproj
+++ b/windows/VS2019/puttytel/puttytel.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
-    <ProjectGuid>{27e8f930-2567-4fdc-82c1-0662af3cdf6d}</ProjectGuid>
+    <ProjectGuid>{b7dd98ff-b336-4d23-9c07-e5fa7a9f3130}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -60,14 +60,14 @@
       <AdditionalIncludeDirectories>..\..\..\./;..\..\..\charset/;..\..\..\windows/;..\..\..\unix/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;POSIX;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Release\</AssemblerListingLocation>
-      <PrecompiledHeaderOutputFile>.\Release\pageant.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Release\puttytel.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <TypeLibraryName>.\Release\pageant.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release\puttytel.tlb</TypeLibraryName>
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <TargetEnvironment>Win32</TargetEnvironment>
     </Midl>
@@ -77,12 +77,12 @@
     </ResourceCompile>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release\pageant.bsc</OutputFile>
+      <OutputFile>.\Release\puttytel.bsc</OutputFile>
     </Bscmake>
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
-      <OutputFile>.\Release\pageant.exe</OutputFile>
+      <OutputFile>.\Release\puttytel.exe</OutputFile>
       <AdditionalDependencies>advapi32.lib;comdlg32.lib;gdi32.lib;imm32.lib;ole32.lib;shell32.lib;user32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -99,7 +99,7 @@
       <AdditionalIncludeDirectories>..\..\..\./;..\..\..\charset/;..\..\..\windows/;..\..\..\unix/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;POSIX;_CRT_SECURE_NO_WARNINGS;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Debug\</AssemblerListingLocation>
-      <PrecompiledHeaderOutputFile>.\Debug\pageant.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug\puttytel.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -107,7 +107,7 @@
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <TypeLibraryName>.\Debug\pageant.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug\puttytel.tlb</TypeLibraryName>
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <TargetEnvironment>Win32</TargetEnvironment>
     </Midl>
@@ -117,7 +117,7 @@
     </ResourceCompile>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug\pageant.bsc</OutputFile>
+      <OutputFile>.\Debug\puttytel.bsc</OutputFile>
     </Bscmake>
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -128,68 +128,91 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CustomBuild Include="..\..\pageant.ico" />
-    <CustomBuild Include="..\..\pageants.ico" />
+    <CustomBuild Include="..\..\putty.ico" />
+    <CustomBuild Include="..\..\puttycfg.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\..\pageant.rc">
+    <ResourceCompile Include="..\..\puttytel.rc">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\aqsync.c" />
+    <ClCompile Include="..\..\..\be_misc.c" />
+    <ClCompile Include="..\..\..\be_nos_s.c" />
+    <ClCompile Include="..\..\..\callback.c" />
+    <ClCompile Include="..\..\..\cmdline.c" />
     <ClCompile Include="..\..\..\conf.c" />
-    <ClCompile Include="..\..\..\ecc.c" />
+    <ClCompile Include="..\..\..\config.c" />
+    <ClCompile Include="..\..\..\dialog.c" />
+    <ClCompile Include="..\..\..\errsock.c" />
+    <ClCompile Include="..\..\..\ldisc.c" />
+    <ClCompile Include="..\..\..\logging.c" />
     <ClCompile Include="..\..\..\marshal.c" />
     <ClCompile Include="..\..\..\memory.c" />
+    <ClCompile Include="..\..\..\minibidi.c" />
     <ClCompile Include="..\..\..\misc.c" />
-    <ClCompile Include="..\..\..\mpint.c" />
-    <ClCompile Include="..\..\..\pageant.c" />
-    <ClCompile Include="..\..\..\sshaes.c" />
-    <ClCompile Include="..\..\..\sshauxcrypt.c" />
-    <ClCompile Include="..\..\..\sshdes.c" />
-    <ClCompile Include="..\..\..\sshdss.c" />
-    <ClCompile Include="..\..\..\sshecc.c" />
-    <ClCompile Include="..\..\..\sshhmac.c" />
-    <ClCompile Include="..\..\..\sshmd5.c" />
-    <ClCompile Include="..\..\..\sshpubk.c" />
-    <ClCompile Include="..\..\..\sshrsa.c" />
-    <ClCompile Include="..\..\..\sshsh256.c" />
-    <ClCompile Include="..\..\..\sshsh512.c" />
-    <ClCompile Include="..\..\..\sshsha.c" />
+    <ClCompile Include="..\..\..\miscucs.c" />
+    <ClCompile Include="..\..\..\nocproxy.c" />
+    <ClCompile Include="..\..\..\nogss.c" />
+    <ClCompile Include="..\..\..\pinger.c" />
+    <ClCompile Include="..\..\..\proxy.c" />
+    <ClCompile Include="..\..\..\raw.c" />
+    <ClCompile Include="..\..\..\rlogin.c" />
+    <ClCompile Include="..\..\..\sercfg.c" />
+    <ClCompile Include="..\..\..\sessprep.c" />
+    <ClCompile Include="..\..\..\settings.c" />
     <ClCompile Include="..\..\..\stripctrl.c" />
+    <ClCompile Include="..\..\..\telnet.c" />
+    <ClCompile Include="..\..\..\terminal.c" />
+    <ClCompile Include="..\..\..\timing.c" />
     <ClCompile Include="..\..\..\tree234.c" />
     <ClCompile Include="..\..\..\utils.c" />
     <ClCompile Include="..\..\..\version.c" />
     <ClCompile Include="..\..\..\wcwidth.c" />
+    <ClCompile Include="..\..\sizetip.c" />
+    <ClCompile Include="..\..\wincfg.c" />
+    <ClCompile Include="..\..\winctrls.c" />
+    <ClCompile Include="..\..\windefs.c" />
+    <ClCompile Include="..\..\windlg.c" />
+    <ClCompile Include="..\..\window.c" />
+    <ClCompile Include="..\..\winhandl.c" />
     <ClCompile Include="..\..\winhelp.c" />
+    <ClCompile Include="..\..\winhsock.c" />
+    <ClCompile Include="..\..\winjump.c" />
     <ClCompile Include="..\..\winmisc.c" />
     <ClCompile Include="..\..\winmiscs.c" />
-    <ClCompile Include="..\..\winpgnt.c" />
-    <ClCompile Include="..\..\winpgntc.c" />
+    <ClCompile Include="..\..\winnet.c" />
+    <ClCompile Include="..\..\winprint.c" />
+    <ClCompile Include="..\..\winproxy.c" />
     <ClCompile Include="..\..\winsecur.c" />
+    <ClCompile Include="..\..\winser.c" />
+    <ClCompile Include="..\..\winstore.c" />
+    <ClCompile Include="..\..\wintime.c" />
+    <ClCompile Include="..\..\winucs.c" />
     <ClCompile Include="..\..\winutils.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\charset\charset.h" />
     <ClInclude Include="..\..\..\defs.h" />
-    <ClInclude Include="..\..\..\ecc.h" />
+    <ClInclude Include="..\..\..\dialog.h" />
     <ClInclude Include="..\..\..\empty.h" />
+    <ClInclude Include="..\..\..\ldisc.h" />
     <ClInclude Include="..\..\..\licence.h" />
     <ClInclude Include="..\..\..\marshal.h" />
     <ClInclude Include="..\..\..\misc.h" />
-    <ClInclude Include="..\..\..\mpint.h" />
-    <ClInclude Include="..\..\..\mpint_i.h" />
     <ClInclude Include="..\..\..\network.h" />
-    <ClInclude Include="..\..\..\pageant.h" />
+    <ClInclude Include="..\..\..\pgssapi.h" />
+    <ClInclude Include="..\..\..\proxy.h" />
     <ClInclude Include="..\..\..\putty.h" />
     <ClInclude Include="..\..\..\puttymem.h" />
     <ClInclude Include="..\..\..\puttyps.h" />
     <ClInclude Include="..\..\..\ssh.h" />
-    <ClInclude Include="..\..\..\sshcr.h" />
+    <ClInclude Include="..\..\..\sshgss.h" />
+    <ClInclude Include="..\..\..\sshgssc.h" />
     <ClInclude Include="..\..\..\sshsignals.h" />
     <ClInclude Include="..\..\..\sshttymodes.h" />
+    <ClInclude Include="..\..\..\storage.h" />
     <ClInclude Include="..\..\..\terminal.h" />
     <ClInclude Include="..\..\..\tree234.h" />
     <ClInclude Include="..\..\..\unix\unix.h" />
